# tinyfetch

./: Cargo.toml  README.md
src/: lib.rs
tests/: lib_tests.rs
