[package]
name = "tinyfetch"
version = "0.1.0"
edition = "2021"
description = "A lightweight library for making HTTP requests in Rust."
authors = ["Webster Avosa <webster@webstercodes.online>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
mockito = "0.26.0"
